# innitico-classroom-analytics-dbt-analytics-dbt-assessment-analytics-dbt-interview-1

./: pyproject.toml  query_duckdb.py
provider_pipeline/: query_duckdb.py
provider_pipeline/dbt-env/: pyvenv.cfg
provider_pipeline/dbt-env/Scripts/: activate  activate.bat  daff.py  dul-receive-pack  dul-upload-pack
provider_pipeline/models/: provider_address_agg.sql  provider_types.sql
test_interview/: query_duckdb.py
test_interview/dbt_profile/: profiles.yml
